welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: ')' expected but '=' found.
    if(getCouleurSol():Color = hunt(c:Color) ) {
                             ^SlugSnail:4: error: illegal start of simple expression
    if(getCouleurSol():Color = hunt(c:Color) ) {
                                             ^